--- a/css/main.css
+++ b/css/main.css
@@ -28,6 +28,8 @@ body {
 .container .img-container img {
   width: 100%;
   height: 100%;
+  border-left-top-raduis: 6px;
+  border-left-bottom-raduis: 6px;
 }
 
 .container .content-container h3 {
@@ -126,6 +128,8 @@ body {
   .container .img-container img {
     width: 300px;
     height: 200px;
+    border-left-top-raduis: 0px;
+  border-left-bottom-raduis: 0px;
   }
 
   .container .content-container .user-info .share-comp .share-option::before {
